--- a/setup.css
+++ b/setup.css
@@ -2,7 +2,7 @@
 
 body{
 	font-size: 20px;
-	font-family: 'Work Sans', sans-serif;
+	font-family: 'Slackey';
 	color: #333;
   font-weight: 300;
   text-align: center;
