--- a/setup.css
+++ b/setup.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Slackey:300,600);
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:300,600);
 
 body{
 	font-size: 20px;
@@ -6,14 +7,14 @@ body{
 	color: #333;
   font-weight: 300;
   text-align: center;
-  background-color: #f8f6f0;
+  background-color: #00BFFF;
 }
 h1{
   font-weight: 300;
   margin: 0px;
   padding: 10px;
   font-size: 20px;
-  background-color: #444;
+  background-color: #DAA520;
   color: #fff;
 }
 .question{
