--- a/setup.css
+++ b/setup.css
@@ -36,10 +36,10 @@ button{
 	background-color: #279;
 	color: #fff;
 	border: 0px;
-	border-radius: 3px;
+	border-radius: 7px;
 	padding: 30px;
 	cursor: pointer;
-	margin-bottom: 30px;
+	margin-bottom: 0px;
 }
 button:hover{
 	background-color: #38a;
@@ -48,9 +48,9 @@ button:hover{
 
 .slide{
   position: absolute;
-  left: 0px;
+  left: 300px;
   top: 0px;
-  width: 100%;
+  width: 60%;
   z-index: 1;
   opacity: 0;
   transition: opacity 0.5s;
@@ -63,4 +63,26 @@ button:hover{
   position: relative;
   height: 350px;
   margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.sidebar {
+height: 100%;
+width: 250px;
+position: absolute;
+top: 0;
+padding-top: 35px;
+background-color: #DAA520;
+color: #F0E68C;
+}
+
+.sidebar div {
+padding: 10px;
+font-size: 24px;
+display: block;
+}
+
+.body-text {
+margin-left: 150px;
+font-size: 18px;
 }
